--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,23 +1,11 @@
 # main links links
 main:
-  - title: "Publications"
-    url: /publications/
-
-  - title: "Talks"
-    url: /talks/    
-
-  - title: "Posters"
-    url: /posters/
-
-  - title: "Teaching"
-    url: /teaching/    
+  - title: "Home"
+    url: /about.html
     
-  - title: "Mentorship"
-    url: /mentorship/
-
   - title: "News"
     url: /news/
 
   - title: "CV"
-    url: /files/Greenman_Kevin_CV.pdf
+    url: files/LYZ_CV.pdf
 
