--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Yuzhe's Academic-Hub"
 title_separator          : "-"
 name                     : &name "YuZhe-Li"
-description              : &description "北京航空航天大学 空间与环境学院 环境工程专业"
+description              : &description "北京航空航天大学 材料科学与工程学院 材料物理化学专业"
 url                      : https://donkeyeee.github.io/YuzheLi.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "YuzheLi.github.io"
